src/main/java/com/example/demo/model/error/ErrorBaseResponse.java
package com.example.demo.model.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@AllArgsConstructor
@NoArgsConstructor
@Builder
public class ErrorBaseResponse {

    private String errorMessage;

}
